Fix for bug 58728. Null check for the disappearing mResponseDataListener. r=darin, sr=alecf.