netwerk/protocol/http/src/nsHTTPResponseListener.cpp
@@ -444,9 +444,11 @@ nsHTTPServerListener::OnDataAvailable(nsIChannel* channel,
         nsCOMPtr<nsIByteArrayInputStream>   is;
 
         nsresult rv1 = 
-            NS_NewByteArrayInputStream(getter_AddRefs(is) , strdup(cp) , mHeaderBuffer.Length()) ;            
+            NS_NewByteArrayInputStream(getter_AddRefs(is) , strdup(cp) ,
+                    mHeaderBuffer.Length()) ;            
         
-        if (NS_SUCCEEDED(rv1)) 
+        NS_ASSERTION(mResponseDataListener, "No data listener! Did we abort?");
+        if (NS_SUCCEEDED(rv1) && mResponseDataListener) 
             mResponseDataListener->OnDataAvailable(mChannel, 
                     mChannel->mResponseContext, is, 0, mHeaderBuffer.Length()) ;
         
